src/test/deca/syntax/valid/prog_with_semi.deca
// Description:
//    Programme ne contenant qu'un point virgule
//
// Resultats:
//    Rien


{;}
