src/test/deca/syntax/invalid/println_sanspointvirgule.deca
// Description:
//   println  sans point virgule
//
// Resultats:
//    Ligne 10 : Erreur de syntaxe.
//    test_lex ne doit pas donner d'erreur.
//

{
        println()
}
